--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,9 @@ body{
 .main_pic{
     margin-top: 1vw;
 }
-
+.border {
+    border-top: 0 !important;
+}
 
 
 @media only screen and (min-width: 992px){
